# partyhamslogger

./: .gitignore  CLAUDE.md  IDEAS.md  Makefile  README.md  pyproject.toml
.github/workflows/: claude.yml  release.yml
docs/: PACKAGING.md  RELEASING.md  WSJTX.md
docs/guide/: about.md  auto-export.md  dx-cluster.md  index.md  macros.md  main-window.md  network-panel.md  new-log.md  open-log.md  pota.md  qrz.md  radio.md  reference-data.md  sections.md  shortcuts.md  themes-fonts.md  wsjtx.md
packaging/: build-appimage.sh  build-linux-pkg.sh  partyhams.spec
packaging/linux/: partyhams.desktop
scripts/: notify_discord.py  release.sh  screenshots.py
src/partyhams/: __init__.py  __main__.py
src/partyhams/app/: __init__.py  banter.py  locks.py  macros.py  radio.py  session.py  state.py  update.py
src/partyhams/cluster/: __init__.py
src/partyhams/contest/: __init__.py  base.py  calendar.py  fd_bonus.py  fieldday.py  pota.py  pota_api.py  registry.py  sections.py
tests/: conftest.py  factories.py  fake_civ.py  fake_cluster.py  fake_flex.py  fake_icom_net.py  fake_rigctld.py  test_about.py  test_autocq.py  test_autoexport.py  test_banter.py  test_calendar.py  test_callers.py  test_certs.py  test_chatsync.py  test_civ.py  test_clocksync.py  test_cluster.py  test_engine.py  test_export.py  test_fd_summary.py  test_fieldday.py  test_flex.py  test_flex_discovery.py  test_flex_protocol.py  test_fonts.py  test_hamlib.py  test_help.py  test_icom_net.py  test_icom_net_protocol.py  test_locks.py  test_macros.py  test_main_window.py  test_multistation_dupe.py  test_network.py  test_notify_discord.py  test_pota.py  test_protocol.py  test_qrz.py  test_radio_poller.py  (+12 more)
(+65 files in other folders)
