[project]
name = "partyhams"
version = "0.0.4"
description = "Cross-platform, multi-station amateur radio contest logger (N1MM-class, easier to run)"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [{ name = "Jeremy Turner" }]
keywords = ["amateur-radio", "ham-radio", "contest", "logging", "n1mm", "field-day"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]

dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",       # asyncio <-> Qt event loop bridge
    "pyserial>=3.5",      # Icom CI-V / serial CAT
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]
packaging = [
    "pyinstaller>=6.0",  # standalone executables / .app bundles
]

[project.scripts]
partyhams = "partyhams.__main__:main"

[project.urls]
Homepage = "https://github.com/"
Repository = "https://github.com/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partyhams"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
